fix: clipboard persistence with CLIPHIST_DB_PATH environment variable

--- a/.config/hypr/source/environment_variables.conf
+++ b/.config/hypr/source/environment_variables.conf
@@ -3,3 +3,6 @@
 
 # this one environment variable is set here to fix a warning caused by hyprland on boot.
 env = XDG_CURRENT_DESKTOP,Hyprland
+
+# Clipboard persistence - required for cliphist to store data
+env = CLIPHIST_DB_PATH,$XDG_RUNTIME_DIR/cliphist.db
