--- a/.config/hypr/source/autostart.conf
+++ b/.config/hypr/source/autostart.conf
@@ -23,8 +23,7 @@ exec-once = uwsm-app -- swayosd-server        # OSD for Volume/Brightness
 
 
 # --- CLIPBOARD MANAGER ---
-exec-once = uwsm-app -- wl-paste --type text --watch cliphist store
-exec-once = uwsm-app -- wl-paste --type image --watch cliphist store
+exec-once = uwsm-app -- $HOME/user_scripts/clipboard/start_cliphist.sh
 
 # --- OPTIONAL / USER INTERFACE ---
 exec-once = uwsm-app -- $HOME/user_scripts/waybar/waybar_autostart.sh
